fixed panel gap when embedding map without footer

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -27,9 +27,6 @@ $timebar-height: 70px;
 $duration-picker-height: 24px;
 $report-panel-menu-height: 48px;
 
-$panel-control-base-height: $timebar-height + $map-footer-height;
-
-
 // Font sizes
 $font-size-tiny: 10px;
 $font-size-xxs-small: 12px; // UI Kit map
