--- a/app/styles/components/c-map-panels.scss
+++ b/app/styles/components/c-map-panels.scss
@@ -6,11 +6,15 @@
   @media #{$mq-tablet} {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - #{$panel-control-base-height});
+    height: calc(100vh - #{$timebar-height + $map-footer-height});
     justify-content: space-between;
     pointer-events: none;
     position: absolute;
     right: 0;
     width: $map-panels-width + $control-panel-left-offset;
+
+    &.-no-footer {
+      height: calc(100vh - #{$timebar-height});
+    }
   }
 }
